Bug 28155 - kmail crashes directly after start
Summary: kmail crashes directly after start
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.2.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2001-07-05 09:18 UTC by S Volmer
Modified: 2012-10-11 09:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S Volmer 2001-07-05 09:07:27 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           kmail
Version:           1.2.2 (using KDE 2.2.0 alpha2)
Severity:          normal
Installed from:    SuSE
Compiler:          gcc version 2.95.2 19991024 (release)
OS:                Linux (i586) release 2.4.2-4GB
OS/Compiler notes: 

kmail crashes directly after start.
It was possible to start kmail with a different user so I searched the Problem in my local configuration.
After moving ~/Mail/.sent-mail.index to a different directory the Problem seems to be fixed kmail is working now correctly.
I report this because a lot of unexperienced users may not be able to solve the Problem and can't use kmail anymore :-(
Stefan Volmer

(Submitted via bugs.kde.org)
(Called from KBugReport dialog)
Comment 1 Don Sanders 2001-07-05 11:43:11 UTC
The index code has been rewritten in the KMail included 
with KDE 2.2.

Don.

On Thursday 05 July 2001 11:07 s.volmer@gmx.net wrote:
> Package: kmail
> Version: 1.2.2 (using KDE 2.2.0 alpha2)
> Severity: normal
> Installed from:    SuSE
> Compiler:          gcc version 2.95.2 19991024 (release)
> OS:                Linux (i586) release 2.4.2-4GB
> OS/Compiler notes:
>
> kmail crashes directly after start.
> It was possible to start kmail with a different user so
> I searched the Problem in my local configuration. After
> moving ~/Mail/.sent-mail.index to a different directory
> the Problem seems to be fixed kmail is working now
> correctly. I report this because a lot of unexperienced
> users may not be able to solve the Problem and can't use
> kmail anymore :-( Stefan Volmer
>
> (Submitted via bugs.kde.org)
> (Called from KBugReport dialog)
Comment 2 Jaime Torres 2012-10-08 20:32:46 UTC
Git commit 593ff7f3462c64d32ae8b99b71b5ba44fab1597c by Jaime Torres.
Committed on 08/10/2012 at 22:29.
Pushed by jtamate into branch 'master'.

hint at the right resolution

Change the font size depending on the window size to show the texts
at the right resolution (dpi independient)
REVIEW: 106659

M  +10   -11   src/desktop/khangmanview.cpp

http://commits.kde.org/khangman/593ff7f3462c64d32ae8b99b71b5ba44fab1597c
Comment 3 Myriam Schweingruber 2012-10-11 09:57:17 UTC
Wrong bug number, not fixed by this commit, but the bug is fixed in kmail2 anyway.