hint at the right resolution

Change the font size depending on the window size to show the texts
at the right resolution (dpi independient)

BUG: 28155
REVIEW: 106659